; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_socket_check_deliver.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_socket_check_deliver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.mbuf = type { i32 }
%struct.label = type { i32 }

@MAGIC_SOCKET = common dso_local global i32 0, align 4
@MAGIC_MBUF = common dso_local global i32 0, align 4
@socket_check_deliver = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*, %struct.label*, %struct.mbuf*, %struct.label*)* @test_socket_check_deliver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_socket_check_deliver(%struct.socket* %0, %struct.label* %1, %struct.mbuf* %2, %struct.label* %3) #0 {
  %5 = alloca %struct.socket*, align 8
  %6 = alloca %struct.label*, align 8
  %7 = alloca %struct.mbuf*, align 8
  %8 = alloca %struct.label*, align 8
  store %struct.socket* %0, %struct.socket** %5, align 8
  store %struct.label* %1, %struct.label** %6, align 8
  store %struct.mbuf* %2, %struct.mbuf** %7, align 8
  store %struct.label* %3, %struct.label** %8, align 8
  %9 = load %struct.socket*, %struct.socket** %5, align 8
  %10 = call i32 @SOCK_LOCK(%struct.socket* %9)
  %11 = load %struct.label*, %struct.label** %6, align 8
  %12 = load i32, i32* @MAGIC_SOCKET, align 4
  %13 = call i32 @LABEL_CHECK(%struct.label* %11, i32 %12)
  %14 = load %struct.socket*, %struct.socket** %5, align 8
  %15 = call i32 @SOCK_UNLOCK(%struct.socket* %14)
  %16 = load %struct.label*, %struct.label** %8, align 8
  %17 = load i32, i32* @MAGIC_MBUF, align 4
  %18 = call i32 @LABEL_CHECK(%struct.label* %16, i32 %17)
  %19 = load i32, i32* @socket_check_deliver, align 4
  %20 = call i32 @COUNTER_INC(i32 %19)
  ret i32 0
}

declare dso_local i32 @SOCK_LOCK(%struct.socket*) #1

declare dso_local i32 @LABEL_CHECK(%struct.label*, i32) #1

declare dso_local i32 @SOCK_UNLOCK(%struct.socket*) #1

declare dso_local i32 @COUNTER_INC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
